// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
import { shallow } from 'enzyme';
import * as React from 'react';

import { ThemeSwitcher } from '../../../../../common/components/theme-switcher';

describe('ThemeSwitcher', () => {
    test.each([true, false])('verify className - isHighContrastEnabled : %s', isHighContrastEnabled => {
        const props = { isHighContrastEnabled };
        const component = shallow(<ThemeSwitcher {...props}>Content</ThemeSwitcher>);
        expect(component.getElement()).toMatchSnapshot();
    });
});
