// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeSwitcher verify className - isHighContrastEnabled : false 1`] = `
<div
  className="theme-switcher"
>
  Content
</div>
`;

exports[`ThemeSwitcher verify className - isHighContrastEnabled : true 1`] = `
<div
  className="theme-switcher high-contrast-theme"
>
  Content
</div>
`;
